Feat: ML server (#41)
* dev: build simple ML model

* dev: integrate model to server

* dev: Docker image for ML server + CI/CD pipeline

* bugfix: enable debug for buildkit
